--- a/index.html
+++ b/index.html
@@ -4,6 +4,55 @@
     <title>Lists Lab</title>
   </head>
   <body>
-    <!-- Write your HTML in this file -->
+    <ul>
+      <li>
+        sandwiches
+        <ul>
+          <li>ham and cheese</li>
+          <li>grilled cheese</li>
+        </ul>
+        
+      </li>
+      <li>
+        snacks
+        <ul>
+          <li>nacho french fries </li>
+          <li>cheese and crackers</li>
+        </ul>
+      </li>
+      <li>
+        soup
+        <ul>
+         <li>cheese soup</li> 
+        </ul>
+      </li>
+      <li>
+        sushi
+        <ul>
+          <li>spicy salamon rolls</li>
+          <li>california rolls</li>
+        </ul>
+      </li>
+    </ul> <br><br><br>
+    <H1>FAVOURITE FOOD</H1>
+    <ul>
+      <li>2 slices of bread</li>
+      <li>
+        4 slices of cheese
+        <ul>
+          <li>chedder</li>
+          <li>mozzarelle</li>
+          <li>pepper jack</li>
+          </ul>
+          <li>1 tbsp of butter</li>
+      </li>
+    </ul>
+
+    <ol>
+      <li>Spread butter on bread and frying pan </li>
+      <li>Place bread in fying pan and fry</li>
+      <li>Add cheese on top of bread</li>
+      <li>Turn over and fry for 2 minutes</li>
+    </ol>
   </body>
 </html>
